# mathboard

./: .gitignore  LICENSE  README.md  app.py  interactive_math.py  latex_to_mathml_migration.md  pyproject.toml  report.md  requirements-lock.txt  requirements.txt
src/: interactive_math.py
src/config/: settings.py
src/crews/: crew.py  run_crew.py
src/crews/config/: agents.yaml  tasks.yaml
src/crews/tools/: explanation_tools.py  latex_tools.py  math_tools.py  mathml_validator_tool.py
src/models/: math_models.py
src/services/: tts_service.py
src/tests/: test_mathml_generation.py  test_mathml_rendering.py  test_mathml_validation.py
src/utils/: latex_utils.py  math_utils.py
static/css/: mathboard.css  styles.css
static/js/: latex-helpers.js  math-helpers.js  mathjax-config.js  socket.js  whiteboard.js
templates/: index.html
test_output/: 20241202_145729_How_do_you_add_fractions?.json
