[project]
name = "math_tutor"
version = "0.1.0"
description = "math_tutor using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
math_tutor = "math_tutor.main:run"
run_crew = "math_tutor.main:run"
train = "math_tutor.main:train"
replay = "math_tutor.main:replay"
test = "math_tutor.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
